# kitbash

./: .gitignore  CLAUDE.md  README.md  fedora-to-arch-migration.md  install.sh  kit-start.sh  kit.conf.example  kit.toml.example  pyproject.toml  todo.md
kit.d/: alacritty.sh  awscli.sh  brightnessctl.sh  claude.sh  claude_cli.sh  copyq.sh  cursor.sh  discord.sh  docker.sh  dotfiles.sh  dropbox.sh  easyeffects.sh  editor.sh  firefox.sh  font.sh  gnome_boxes.sh  google_chrome.sh  greetd.sh  hibernate.sh  hostname.sh  hypridle.sh  hyprland.sh  hyprlock.sh  imagemagick.sh  jq.sh  mako.sh  moonlight.sh  mounts.sh  niri.sh  nordvpn.sh  obsidian.sh  ollama.sh  openssh.sh  qpwgraph.sh  remmina.sh  rofi.sh  sddm.sh  sound.sh  steam.sh  sudo_timeout.sh  (+11 more)
kitbash/: cli.py  config.py  exceptions.py  logging.py  runner.py  setup.py  shell.py  state.py
kitbash/modules/: base.py
kitbash/modules/apps/: fd.py  fzf.py  gimp.py  grim.py  nordvpn.py  slurp.py  swappy.py  syncthing.py  uv.py  zoxide.py
kitbash/modules/system/: dotfiles.py  hostname.py  pipewire.py  shell.py  sudo_timeout.py
kitbash/pkg/: __init__.py  apt.py  base.py  detect.py  dnf.py  pacman.py
lib/: logging.sh  module-runner.sh  paths.sh  pkg.sh  run-setup.sh  setup-functions.sh  state.sh
tests/: conftest.py  test_config.py  test_runner.py  test_shell.py  test_state.py
tests/modules/: test_base.py
tests/modules/apps/: test_gimp.py  test_nordvpn.py  test_syncthing.py
tests/modules/system/: test_dotfiles.py  test_hostname.py  test_pipewire.py  test_shell.py  (+1 more)
tests/pkg/: test_base.py  test_detect.py
