[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitbash"
version = "0.1.0"
description = "Modular system configurator and application installer"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
kitbash = "kitbash.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.13"
strict = true
